force-app/main/default/objects/OI_Node_Type_Descriptor__mdt/fields/Color_Token__c.field-meta.xml
<CustomField>
    <fullName>Color_Token__c</fullName>
    <label>Color Token</label>
    <type>Text</type>
    <length>40</length>
</CustomField>