force-app/main/default/objects/OI_Node_Type_Descriptor__mdt/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <label>Display Label</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>