force-app/main/default/objects/OI_Node_Type_Descriptor__mdt/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <label>Icon Name</label>
    <type>Text</type>
    <length>255</length>
    <description>SLDS icon token, resolved generically by the Canvas/Detail Panel.</description>
</CustomField>