force-app/main/default/objects/OI_Node_Type_Descriptor__mdt/fields/Intelligence_Category__c.field-meta.xml
<CustomField>
    <fullName>Intelligence_Category__c</fullName>
    <description
  >Which section(s) of the Intelligence panel a neighbour of this node type belongs under: Structure, Automation, Code, Security, or Data — semicolon-delimited when a type genuinely belongs under more than one (e.g. "Automation;Code" for Apex Trigger). Registry-driven rather than hardcoded in Apex or LWC, so introducing a new metadata type places it in the right section(s) with no code change (ADR-0011). Left blank means the type is only summarised generically and never gets its own section.</description>
    <inlineHelpText
  >Structure, Automation, Code, Security, or Data — semicolon-delimited for more than one (e.g. "Automation;Code"). Controls which Intelligence panel section(s) this node type appears under.</inlineHelpText>
    <label>Intelligence Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>