force-app/main/default/objects/OI_Node_Type_Descriptor__mdt/fields/Search_Boost_Weight__c.field-meta.xml
<CustomField>
    <fullName>Search_Boost_Weight__c</fullName>
    <label>Search Boost Weight</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Admin-tunable ranking multiplier applied uniformly by OI_SearchService (SearchEngine.md §14). Reserved for the Search Engine sprint.</description>
</CustomField>