force-app/main/default/objects/OI_Node_Type_Descriptor__mdt/fields/Show_Field_List__c.field-meta.xml
<CustomField>
    <fullName>Show_Field_List__c</fullName>
    <label>Show Field List</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether nodes of this type render as a Schema-Builder-style card listing their own HAS_FIELD children inline, instead of a plain pill — a rendering-registry decision (GraphUI.md §20), never a hardcoded typeKey check in the Canvas.</description>
</CustomField>